docs/7.56/md/abenabap_syntax.md
---
title: "Syntax Elements of an ABAP Program"
description: |
  The following sections describe the syntax elements that can be used in an ABAP program: -   ABAP Statements(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_statements.htm) -   Comments(https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencomment.htm) -   Program D
version: "7.56"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_syntax.htm"
abapFile: "abenabap_syntax.htm"
keywords: ["do", "if", "abenabap", "syntax"]
---

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_reference.htm) → 

Syntax Elements of an ABAP Program

The following sections describe the syntax elements that can be used in an ABAP program:

-   [ABAP Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_statements.htm)
-   [Comments](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencomment.htm)
-   [Program Directives](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenprogram_directives.htm)
-   [Naming Conventions and Namespaces](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennaming_conventions.htm)

Hint

The syntax diagrams of the ABAP keyword documentation show the language elements in a syntactically correct order. In many statements, other orders are also possible, but are not mentioned. For the documentation, the order is chosen that best suits the semantics of a statement and which describes the different variants of a statement the most consistently.

Continue
[ABAP Statements](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap_statements.htm)
[Comments](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abencomment.htm)
[Program Directives](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenprogram_directives.htm)
[Naming Conventions and Namespaces](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennaming_conventions.htm)